Update Bayesian chapter

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -424,7 +424,7 @@ The data and modelling choices were designed with a spatial epidemiology applica
 | Besag | $\mathbf{u} \sim \mathcal{N}(0, {\mathbf{R}^\star}^{-})$ as in Section \@ref(besag) |
 | Integrated kernel (IK) | $\mathbf{u} \sim \mathcal{N}(0, \mathbf{K}^\star)$ as in Section \@ref(integrated-kernel) with Matérn kernel, $\nu = 3/2, l = 2.5$ and $L_i = 100$ points per area |
 
-Table: (\#tab:simulation-models) The models used to create synthetic data.
+Table: (\#tab:simulation-models) The three spatial random effect models used to create synthetic data for the simulation study.
 
 Data $\mathbf{y} = (y_i)_{i \in [n]}$ were simulated from a binomial likelihood $y_i \sim \text{Bin}(m_i, \rho_i)$.
 The probabilities $\rho_i \in [0, 1]$ were linked to linear predictors $\eta_i \in \mathbb{R}$ via
@@ -464,7 +464,7 @@ For each of the three spatial random effect models and seven geometries 100 simu
 | FIK   | $\mathbf{u} \sim \mathcal{N}(0, \tau_u^{-1} \mathbf{K})$ with $K_{ij} = \cdots$ as in Section \@ref(integrated-kernel) with fixed length-scale $l$ |
 | IK    | $\mathbf{u} \sim \mathcal{N}(0, \tau_u^{-1} \mathbf{K})$ with $K_{ij} = \cdots$ as in Section \@ref(integrated-kernel) with length-scale prior distribution $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$ |
 
-Table: (\#tab:inferential-models) The models used for inference. Each model is implemented in the `arealutils` package. The BYM2 model was implemented using the sparsity preserving parameterisation described in Section 3.2 of @riebler2016intuitive.
+Table: (\#tab:inferential-models) The spatial random effect models used for inference. Each model is implemented in the `arealutils` package. The BYM2 model was implemented using the sparsity preserving parameterisation described in Section 3.2 of @riebler2016intuitive.
 
 Eight inferential models were fit to the synthetic data (Table \@ref(tab:inferential-models)).
 Apart from the spatial random effect specification, each inferential model corresponded exactly to the simulation model.
@@ -587,7 +587,7 @@ To this end, model performance was compared in estimating district-level HIV pre
 | Tanzania       | PHIA 2017 | 31              | Region          |
 | Zimbabwe       | PHIA 2016 | 60              | District        |
 
-Table: (\#tab:hiv-surveys) The household surveys included in the analysis.
+Table: (\#tab:hiv-surveys) The household surveys included in the HIV prevalence study.
 
 ### Household survey data
 
