--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -582,7 +582,7 @@ knitr::include_graphics("figures/naomi-aghq/epil.png")
 | Section \@ref(epil-nuts)             | NUTS           | `tmbstan`     |
 | Section \@ref(epil-nuts-rstan)       | NUTS           | `rstan`       |
 
-Table: (\#tab:epil-approaches) The inference methods and software considered.
+Table: (\#tab:epil-approaches) The inference methods and software considered to fit the epilepsy GLMM.
 
 Inference for the epilepsy GLMM was conducted using a range of approaches (Table \@ref(tab:epil-approaches)).
 Section \@ref(epil-comparison) compares the results.
@@ -927,7 +927,7 @@ This section considers inference using three approaches (Table \@ref(tab:loaloa-
 | Laplace, AGHQ  | `TMB` and `aghq` |
 | NUTS           | `tmbstan`     |
 
-Table: (\#tab:loaloa-approaches) The inference methods and software considered.
+Table: (\#tab:loaloa-approaches) The inference methods and software considered to fit the Loa loa ELGM.
 
 The `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12].
 Latent field and hyperparameter samples were used in each conditional simulation (Figure \@ref(fig:conditional-simulation-adam-fixed)).
