--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -13,7 +13,7 @@ resource_version <- "20231120-121631-164346ab"
 | High                  | 1.0-3.0\% incidence and high-risk behaviour                                                |
 | Very high             | >3.0\% incidence                                                                           |
 
-Table: (\#tab:unaids-strategy-prioritisation) Prioritisation strata given by @unaids2021global based on to HIV incidence in the general population and behavioural risk.
+Table: (\#tab:unaids-strategy-prioritisation) Prioritisation strata for AGYW given by @unaids2021global based on to HIV incidence in the general population and behavioural risk.
 
 | Intervention                                                 | Low  | Moderate | High | Very High |
 |--------------------------------------------------------------|------|----------|------|-----------|
@@ -23,7 +23,7 @@ Table: (\#tab:unaids-strategy-prioritisation) Prioritisation strata given by @un
 | PrEP use                                                     | -    | 5\%      | 50\% | 50\%      |
 | Economic empowerment                                         | -    | -        | 20\% | 20\%      |
 
-Table: (\#tab:unaids-strategy-targets) Commitments recommended by @unaids2021global to be met for each intervention, given in terms of the proportion of the prioritisation strata reached. The symbol "-" represents no commitment.
+Table: (\#tab:unaids-strategy-targets) Commitments recommended by @unaids2021global to be met for each HIV intervention, given in terms of the proportion of the AGYW prioritisation strata reached. The symbol "-" represents no commitment.
 
 ## Household survey data
 
@@ -57,7 +57,7 @@ if(knitr::is_latex_output()) {
 | Uganda 2004 AIS     | Unable to download region boundaries.                                   |
 | Zambia 2002 DHS     | No GPS coordinates available to place survey clusters within districts. |
 
-Table: (\#tab:surveys-excluded) All of that surveys that were excluded from the analysis.
+Table: (\#tab:surveys-excluded) All of that household surveys that were excluded from the analysis.
 
 ## Spatial analysis levels
 
@@ -90,7 +90,7 @@ Table: (\#tab:area-levels) The number of areas and analysis level for each count
 | $\texttt{v767[a, b, c]}$  | Relationship with last three sexual partners. Options are: spouse, boyfriend not living with respondent, other friend, casual acquaintance, relative, commercial sex worker, live-in partner, other. |
 | $\texttt{v791a}$          | Had sex in return for gifts, cash or anything else in the past 12 months. (Asked only to women 15-24 who are not in a union.) |
 
-Table: (\#tab:survey-questions-ais-dhs) The survey questions included in AIDS Indicator Survey (AIS) and Demographic and Health Surveys (DHS).
+Table: (\#tab:survey-questions-ais-dhs) The behavioural survey questions included in AIDS Indicator Survey (AIS) and Demographic and Health Surveys (DHS) used to determine AGYW risk group membership.
 
 | Variable(s)                      | Description                                                                 |
 |--------------------------------  |-----------------------------------------------------------------------------|
@@ -101,7 +101,7 @@ Table: (\#tab:survey-questions-ais-dhs) The survey questions included in AIDS In
 | $\texttt{sellsx12mo}$            | Had sex for money and/or gifts in the last 12 months.                       |
 | $\texttt{buysx12mo}$             | Paid money or given gifts for sex in the last 12 months.                    |
 
-Table: (\#tab:survey-questions-ais-dhs) The survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys.
+Table: (\#tab:survey-questions-ais-dhs) The behavioural survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys used to determine AGYW risk group membership.
 
 ## Additional figures
 
