--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,4 +1,5 @@
 Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
+<!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
 I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
 Thanks to the HIV Inference Group at Imperial for tolerating a mathematician, and helping me learn to present my research.
 Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
@@ -9,8 +10,9 @@ Without Alex, Chapter \@ref(naomi-aghq) would never have gotten anywhere.
 Thanks to Håvard Rue and Finn Lindgren for helpful answers on the `R-INLA` discussion group.
 My sense for what matters has been shaped, and arguably improved, by the Effective Altruism community.
 Thank you to the Meridian, Trajan, and LEAH offices for hosting me.
-Thanks to Pınar for believing in my research at times when I didn't.
+Thanks to Pınar for believing in me and my research at times when I didn't.
 Thank you to my housemates in Hackney: August, Dewi, Henry, Jerome, Johnny, and Tamara.
+No thanks to Simon Marshall, he didn't help, if anything he held me back.
 This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
 <!-- Parents: Deborah, Karl. -->
 <!-- Grandparents: Kath, Tony. -->
