--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -18,10 +18,12 @@
 \item[$x \sim p(x)$] $x$ has the probability distribution $p(x)$.
 \item[$A_i$] Areal unit.
 \item[$A_i \sim A_j$] Adjacency between areal units.
+\item[$\mathbf{u}$] Random effects, often spatial.
 \item[$\mathbf{H}$] Hessian matrix.
 \item[$\mathbf{R}$] Structure matrix.
 \item[$\mathbf{Q}$] Precision matrix.
 \item[$\bm{\Sigma}$] Covariance matrix.
+\item[$\mathbf{M}^{-}$] The generalised inverse of a (potentially rank-deficient) matrix $\mathbf{M}$
 \item[$\mathcal{N}$] Gaussian distribution.
 \item[$k: \mathcal{X} \times \mathcal{X} \to \mathbb{R}$] Kernel function on the space $\mathcal{X}$.
 \item[$A_i \sim A_j$] Adjacency between areal units.
