--- a/references.bib
+++ b/references.bib
@@ -2468,3 +2468,9 @@
   year={2023}
 }
 
+@article{vehtari2020cross,
+  title={Cross-validation FAQ},
+  author={Vehtari, Aki},
+  journal={Model selection tutorials and talks},
+  year={2020}
+}
