--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -86,7 +86,7 @@ p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) = \frac{p(\mathbf{y}, \boldsymb
 Unfortunately, most of the time it is intractable to calculate the posterior distribution analytically.
 This is because of the potentially high-dimensional integral
 \begin{equation}
-p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymbol{\mathbf{\phi}}
+p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymbol{\mathbf{\phi}} (\#eq:evidence)
 \end{equation}
 in the denominator of Equation \@ref(eq:posterior).
 The result of this integral is known as the evidence $p(\mathbf{y})$, and quantifies the probability of obtaining the data under the model.
@@ -106,18 +106,18 @@ Computational strategies for approximating the posterior distribution [@martin20
 
 Monte Carlo algorithms [@robert2005monte] aim to generate samples from the posterior distribution 
 \begin{equation}
-\boldsymbol{\mathbf{\phi}}_i \sim p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}), \quad i \in 1, \ldots M.
+\boldsymbol{\mathbf{\phi}}_s \sim p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}), \quad s \in 1, \ldots S.
 \end{equation}
 These samples may be used in any future computations involving functions of the posterior distribution.
 For example, if $G = G(\boldsymbol{\mathbf{\phi}})$ then the expectation of $G$ with respect to the posterior distribution can be approximated by
 \begin{equation}
-\mathbb{E}(G \, | \, \mathbf{y}) = \int G(\boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \text{d} \boldsymbol{\mathbf{\phi}} \approx \frac{1}{M} \sum_{i = 1}^M G(\boldsymbol{\mathbf{\phi}}_i).
+\mathbb{E}(G \, | \, \mathbf{y}) = \int G(\boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \text{d} \boldsymbol{\mathbf{\phi}} \approx \frac{1}{S} \sum_{s = 1}^S G(\boldsymbol{\mathbf{\phi}}_s).
 \end{equation}
 Most quantities of interest can be cast as posterior expectations which can then be approximated empirically using samples in this way.
 
 Markov chain Monte Carlo (MCMC) methods [@roberts2004general] are the most popular class of sampling algorithms.
 Using MCMC, samples are generated from by simulating from an ergodic Markov chain with the posterior distribution as its stationary distribution.
-The Metropolis-Hastings [MH; @metropolis1953equation; @hastings1970monte] algorithm uses a proposal distribution $q(\boldsymbol{\mathbf{\phi}}_{i + 1} \, | \, \boldsymbol{\mathbf{\phi}}_i)$ to generate candidate parameters for the next step in the Markov chain.
+The Metropolis-Hastings [MH; @metropolis1953equation; @hastings1970monte] algorithm uses a proposal distribution $q(\boldsymbol{\mathbf{\phi}}_{s + 1} \, | \, \boldsymbol{\mathbf{\phi}}_s)$ to generate candidate parameters for the next step in the Markov chain.
 Many MCMC algorithms, including the Gibbs sampler [@geman1984stochastic], are special cases of MH.
 
 Other notable classes of sampling algorithms include importance sampling [IS; @tokdar2010importance] methods in which the samples are weighted, sequential Monte Carlo [SMC; @chopin2020introduction] methods based on sampling from a sequence of distributions, and approximate Bayesian computation [ABC; @sisson2018handbook]
@@ -135,7 +135,7 @@ Panel \@ref(fig:stan)B shows the traceplot for a Markov chain which has converge
 A range of convergence diagnostics have been developed for MCMC [@roy2020convergence; @margossian2023many].
 Two widely used examples are the potential scale reduction factor $\hat R$ [@gelman1992inference], which compares the variance between and within parallel Markov chains, and the effective sample size (ESS), which measures the efficiency of samples drawn from MCMC.
 
-(ref:stan) NUTS can be used to sample from the posterior distribution described in Figure \@ref(fig:conjugate). Panel A shows a histogram of the NUTS samples as compared to the true posterior. The visual appearance of a histogram depends highly on the number of bins chosen. Other visualisations, such as empirical cumulative difference function plots, though less initially intuitive, are preferred for accurate distributinal sample comparisons. Panel B is a traceplot showing the path of the Markov chain $\{\phi_i\}_{i = 1}^{1000}$ as it explores the posterior distribution. In this case, the Markov chain moves freely throughout the posterior distribution, without getting stuck in any one location for long, indicating good performance of the sampler. Panel C shows the convergence of the empirical posterior mean $\frac{1}{i} \sum_{j \leq i} \phi_j$ to the true value of $\mathbb{E}(\phi)$ as more iterations of the Markov chain are included in the sum.
+(ref:stan) NUTS can be used to sample from the posterior distribution described in Figure \@ref(fig:conjugate). Panel A shows a histogram of the NUTS samples as compared to the true posterior. The visual appearance of a histogram depends highly on the number of bins chosen. Other visualisations, such as empirical cumulative difference function plots, though less initially intuitive, are preferred for accurate distributinal sample comparisons. Panel B is a traceplot showing the path of the Markov chain $\{\phi_s\}_{s = 1}^{1000}$ as it explores the posterior distribution. In this case, the Markov chain moves freely throughout the posterior distribution, without getting stuck in any one location for long, indicating good performance of the sampler. Panel C shows the convergence of the empirical posterior mean $\frac{1}{s} \sum_{l \leq s} \phi_l$ to the true value of $\mathbb{E}(\phi)$ as more iterations of the Markov chain are included in the sum.
 
 ```{r stan, fig.cap="(ref:stan)"}
 knitr::include_graphics("figures/bayesian/stan.png")
@@ -169,32 +169,15 @@ As computational techniques and tools improve, the space of models available to 
 
 ## Spatio-temporal statistics {#st-statistics}
 
-Space and time are important features of data related to HIV.
+Space and time are important features of infectious disease data, including those related to HIV.
 The field of spatio-temporal statistics [@cressie2015statistics] is concerned with such observations indexed by spatial or temporal location.
-It unites the fields of spatial statistics [@bivand2008applied] and time series analysis [@shumway2017time].
+It unifies the fields of spatial statistics [@bivand2008applied], concerned with observations indexed by space, and time series analysis [@shumway2017time], concerned with observations index by time.
 
-### Properties of spatio-temporal data
+Section \@ref(properties) characterises the shared properties of spatio-temporal data.
+Section \@ref(small-area-estimation) describes how these properties facilitate the class of methods called small-area estimation that the work in this thesis falls under.
 
-Spatio-temporal data have important shared properties.
- 
-#### Covariance structure
+### Properties of spatio-temporal data {#properties}
 
-In "The Design of Experiments" @fisher1936design observed that neighbouring crops were more likely to have similar yields than those far apart.
-This observation was later termed Tobler's first law of geography, that "everything is related to everything else, but near things are more related than distant things" [@tobler1970computer].
-
-This law can be formalised using spatial covariance functions.
-Spatial covariance functions are called isotropic when they apply equally in all directions, and stationary when they are invariant over space.
-
-As well as space, Tobler's first law applies to time.
-Observations made close together in time tend to be similar.
-Temporal covariance structures are often periodic.
-
-The space-time covariance structure [@porcu202130] is said to be separable when it can be factorised as a product of individual spatial and temporal covariances, and nonseparable when it can't.
-A separable space-time covariance could have spatial and temporal components which are either independent and identically distributed (IID) or structured [@knorr2000bayesian].
-
-Because of their covariance structure, spatio-temporal data are not IID.
-Only one observation of a spatio-temporal process is realised.
-    
 #### Scales
 
 (ref:st) In Panel A, the spatial location of Cape Town in South Africa can be considered a point, and the ZF Mgcawu District Municipality (DM) can be considered as an an area. In Panel B, World AIDS Day, designated on the 1st of December every year, can be considered a point in time, whereas the second fiscal quarter, running through April, May and June, and denoted by Q2 represents a period of time. (In reality, both Cape Town and World AIDS Day are areas, rather than true point locations. Instances of infinitesimal point locations in everyday life are rare.)
@@ -203,26 +186,48 @@ Only one observation of a spatio-temporal process is realised.
 knitr::include_graphics("figures/bayesian/st.png")
 ```
 
-In this thesis the spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$ is assumed to have two dimensions, corresponding to latitude and longitude.
-Observations may be associated to a point $s \in \mathcal{S}$ or area $A \subseteq \mathcal{S}$ in the study region.
-The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally be assumed to be on-dimensional.
-Together with time moving only in the forward direction, this feature is what distinguishes time from space.
-As with space, observations may be associated to a point $t \in \mathcal{T}$ or period of time $T \subseteq \mathcal{T}$.
-Figure \@ref(fig:st) illustrates both types of observation for space (Panel A\@ref(fig:st)) and time (Panel B\@ref(fig:st)).
+The scale of spatio-temporal data refers to its extent and resolution.
+Its extent is the length of time and the size of the spatial study region over which data was collected.
+Its resolution is how fine-grained those observations were.
 
-Spatio-temporal observations can be made at various possible scales.
-Sometimes, we may want to model data at a scale it was not observed at.
-This is known as the change-of-support problem [@gelfand2001change] and includes as special cases the problems of downscaling, upscaling, and dealing with so-called misaligned data.
-Closely related is the problem of jointly modelling data at different scales simultaneously.
+The spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$ used in this thesis is typically a country or collection of countries, and assumed to have two dimensions, corresponding to latitude and longitude.
+Observations may be associated to a point $s \in \mathcal{S}$ or area $A \subseteq \mathcal{S}$ in the spatial study region.
+Panel A\@ref(fig:st)) illustrates a spatial point and area.
+
+The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally be assumed to be one-dimensional.
+This feature, and the fact that time moves only in the forward direction, is what distinguishes time from space.
+As with space, observations may be associated to a point $t \in \mathcal{T}$ or period of time $T \subseteq \mathcal{T}$.
+Panel B\@ref(fig:st)) illustrates a temporal point and period.
+
+The change-of-support problem [@gelfand2001change] occurs when data is modelled at a scale different to the one it was observed at.
+Special cases of the change-of-support problem include downscaling, upscaling, and dealing with so-called misaligned data.
+It is also possible that spatio-temporal observations of the same process are made at multiple scales.
+Jointly modelling data at different scales simultaneously is another closely related challenge to the change-of-support problem.
+
+#### Covariance structure {#correlation-structure}
+
+In "The Design of Experiments" @fisher1936design observed that neighbouring crops were more likely to have similar yields than those far apart.
+This observation was later termed Tobler's first law of geography, that "everything is related to everything else, but near things are more related than distant things" [@tobler1970computer].
+As well as space, Tobler's first law applies to time.
+Observations made close together in time tend to be similar.
+
+This law can be formalised using space-time covariance functions.
+A space-time covariance structure [@porcu202130] is said to be separable when it can be factorised as a product of individual spatial and temporal covariances, and nonseparable when it can't.
+A separable space-time covariance could have spatial and temporal components which are either independent and identically distributed (IID) or structured [@knorr2000bayesian].
+Spatial covariance functions are called isotropic when they apply equally in all directions, and stationary when they are invariant over space.
+Temporal covariance structures are often periodic.
+Because of their covariance structure, spatio-temporal data are not IID.
+Only one observation of a spatio-temporal process is realised.
 
 #### Size
 
-Data with both spatial and temporal dimensions are often large, making storage and operations on spatio-temporal data potentially difficult.
+Data with both spatial and temporal dimensions are often large.
+This makes storage and mathematical operations on spatio-temporal data potentially challenging.
 Furthermore, models for spatio-temporal data typically require many parameters.
 Whereas large IID data can be modelled using a small number of parameters, each observation in a spatio-temporal dataset may need to be characterised by its own parameters.
 Large data combined with large models make Bayesian inference challenging.
 
-### Small-area estimation
+### Small-area estimation {#small-area-estimation}
 
 Data always has some cost to collect.
 This cost can be significant and prohibitive, especially for data relating to people where collection is difficult to automate.
@@ -231,21 +236,21 @@ Direct estimates of indicators of interest are either impossible or inaccurate i
 
 Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
 In the spatio-temporal setting sharing of information occurs across space and time.
-The knowledge that observations in one spatio-temporal location are correlated with those at another can be used to improve estimates.
+Prior knowledge that observations in one spatio-temporal location are correlated with those at another can be used to improve estimates.
 Figures \@ref(fig:zmb-maps) and \@ref(fig:zmb-scatter) illustrate the unreliability of direct estimates from small sample sizes, as well as the way in which a spatial model may be used to overcome this limitation in part.
 
-More generally, SAE methods are useful when data are limited for subpopulations of interest.
+SAE methods are more generally useful when data are limited for subpopulations of interest.
 These subpopulations could be generated by spatio-temporal variables, as well as by other variables such as demographics.
 Just as we expect there to be spatio-temporal correlation structure, we also can expect there to be demographic correlation structure.
 For example, those of the same sex are more likely to be similar, as are those of similar ages or socio-economic strata.
 
-(ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size $m = 5, 25, 125$ in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the empirical ratio of data to sample size. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. The colour palette used in this figure is called viridis, as implemented by the `viridis` R package [@viridis], and was designed to be perceptually uniform and accessible to colourblind viewers [@smith2015better]. This figure was adapted from a presentation given for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids). Estimates of HIV indicators for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the higher-resolution constituency level, as program planning is devolved locally.
+(ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size $m = 5, 25, 125$ in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the empirical ratio of data to sample size. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. Estimates of HIV indicators for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the higher-resolution constituency level, as program planning is devolved locally. This figure was adapted from a presentation given for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids). The viridis colour palette used in this figure, as implemented by the `viridis` R package [@viridis], was designed to be perceptually uniform and accessible to colourblind viewers [@smith2015better].
 
 ```{r zmb-maps, fig.cap="(ref:zmb-maps)"}
 knitr::include_graphics("figures/bayesian/zmb-maps.png")
 ```
 
-(ref:zmb-scatter) The setting of this figure matches that of Figure \@ref(fig:zmb-maps). Estimates from surveys with higher sample size have higher Pearson correlation coefficient $R$ with the underlying truth, illustrating the benefit of collecting more data. For a fixed sample size however, correlation can be improved by using modelled estimates to borrow information across spatial units, rather than using the higher variance direct estimates. Points along the dashed diagonal line correspond to agreement between the estimate obtained from the survey and the underlying truth used to generate the data. For each sample size, using a spatial model increases the correlation between the estimates and underlying truth. The effect is more pronounced for lower sample sizes.
+(ref:zmb-scatter) The setting of this figure matches that of Figure \@ref(fig:zmb-maps). Estimates from surveys with higher sample size have higher sample Pearson correlation coefficient $R$ with the underlying truth, illustrating the benefit of collecting more data. For a fixed sample size however, correlation can be improved by using modelled estimates to borrow information across spatial units, rather than using the higher variance direct estimates. Points along the dashed diagonal line correspond to agreement between the estimate obtained from the survey and the underlying truth used to generate the data. For each sample size, using a spatial model increases the correlation between the estimates and underlying truth. The effect is more pronounced for lower sample sizes.
 
 ```{r zmb-scatter, fig.cap="(ref:zmb-scatter)"}
 knitr::include_graphics("figures/bayesian/zmb-scatter.png")
@@ -253,9 +258,9 @@ knitr::include_graphics("figures/bayesian/zmb-scatter.png")
 
 ## Model structure {#model-structure}
 
-Section \@ref(st-statistics) showed that in spatio-temporal statistics observations are related to each other, and inappropriate to treat as IID.
-This section discuss ways in which the relations between observations can be encoded mathematically.
-First, simple structures are discussed, before moving on to more expressive structures.
+Section \@ref(correlation-structure) described that in spatio-temporal statistics observations are related to each other, and it is inappropriate to treat data as IID.
+This section discusses ways to encode relations between observations mathematically via statistical models.
+First, simple structures are discussed such as the linear model, before moving on to more expressive structures.
 
 ### Linear model
 
@@ -272,14 +277,14 @@ Priors may be placed on the regression coefficients $\beta_l \sim p(\beta_l)$ fo
 
 ### Generalised linear model
 
-Generalised linear models (GLMs) extend the linear models by allowing the conditional mean $\mu_i$ to be connected to the linear predictor $\eta_i$ via a link function $g$.
+Generalised linear models (GLMs) extend the linear model by allowing the conditional mean $\mu_i$ to be connected to the linear predictor $\eta_i$ via a link function $g$.
 \begin{align}
 y_i &\sim p(y_i \, | \, \eta_i), \\
 \mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i). 
 \end{align}
 The logistic function $g(\eta) = \exp(\eta) / (1 + \exp(\eta))$ is commonly used as a link function to ensure that the conditional mean is in the range $[0, 1]$.
-Similarly, the exponential function $g(\eta) = \exp(\eta)$ is also commonly used to ensure the conditional mean is positive.
-GLMs also admit a wider range of likelihoods $p(y_i \, | \, \eta_i)$ than linear models, typically restrictly to the so-called exponential family of distributions.
+Similarly, the exponential function $g(\eta) = \exp(\eta)$ can be used to ensure the conditional mean is positive.
+GLMs admit a wider range of likelihoods $p(y_i \, | \, \eta_i)$ than linear models, typically restricted to the so-called exponential family of distributions.
 The equation for the linear predictor is the same as in the linear model case (Equation \@ref(eq:linear-model)).
 
 ### Generalised linear mixed effects model
@@ -289,113 +294,126 @@ In a generalised linear mixed effects model (GLMM) the linear predictor of the G
 \eta_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}).
 \end{equation}
 The terms $u_k$ are called random effects, of additional covariates $w_{ki}$.
-The terms $\beta_l$ are then referred to as fixed effects.
-Unfortunately these terms have notoriously many different and incompatible definitions which can cause confusion [@gelman2005analysis].
+The terms $\beta_l$ are referred to as fixed effects.
+These terms have notoriously many different and incompatible definitions which unfortunately can cause confusion [@gelman2005analysis].
 
 Random effects allow for more complex sharing of information between observations.
-To demonstrate, consider the complete pooling model
+To demonstrate this fact, consider the model
 \begin{equation}
 \eta_i = \beta_0.
 \end{equation}
-In this model, all observations are assumed to be equivalent.
-Alternatively, consider the no pooling model
+In this model, known as the complete pooling model, all observations are assumed to be equivalent.
+Alternatively, consider the so-called no pooling model
 \begin{equation}
 \eta_i = \beta_0 + \beta_1 z_i,
 \end{equation}
 with $z_i \in \{0, 1\}$ a binary covariate.
-Now, there are two groups of observations.
-Finally, consider the partial pooling model.
-For the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models.
-The parameter $\beta_0$ applies to all groups, and each group is differentiated by a specific value of $u_i$.
+Now, there are two groups of observations, each of which with its own mean, $\beta_0$ for the first group and $\beta_0 + \beta_1$ for the second.
+Finally, consider an intermediate between these two extremes, known as the partial pooling model.
+In the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models.
+The parameter $\beta_0$ applies to all groups, and each group is differentiated by a specific value of the random effects $u_i$.
 
 Random effects can be structured to share information between some observations more than others.
-In spatio-temporal statistics, structured spatial and temporal random effects are often used to encode smoothness.
+In spatio-temporal statistics, structured spatial and temporal random effects are often used to encode smoothness in space or time.
 
-A generalised additive model [GAMs; @wood2017generalized; @hastie1987generalized] is a type of GLMM in which such and such.
+Generalised additive models [GAMs; @wood2017generalized; @hastie1987generalized] can be cast to fit into the GLMM framework.
+GAMs place more of a focus on using $u_k$ to do something.
 
 ### Latent Gaussian model {#lgm}
 
-Latent Gaussian models [LGMs; @rue2009approximate] are a type of GLMMs in which Gaussian priors are used for certain parameters of the model.
-In particular, the parameters $\beta_0$, $\{\beta_j\}$, $\{u_k(\cdot)\}$ are assigned Gaussian prior distributions.
-These parameters can be collected into a vector $\mathbf{x} \in \mathbb{R}^N$ called the latent field such that
+Latent Gaussian models [LGMs; @rue2009approximate] are a type of GLMMs in which Gaussian priors are used for specific parameters of the model.
+These parameters are $\beta_0$, $\{\beta_j\}$, $\{u_k(\cdot)\}$, and can be collected into a vector $\mathbf{x} \in \mathbb{R}^N$ called the latent field.
+The Gaussian prior distribution is
 \begin{equation}
 \mathbf{x} \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\boldsymbol{\mathbf{\theta}}_2)^{-1}),
 \end{equation}
 where $\boldsymbol{\mathbf{\theta}}_2 \in \mathbb{R}^{s_2}$ are hyperparameters, with $s_2$ assumed small.
 The vector $\boldsymbol{\mathbf{\theta}}_1 \in \mathbb{R}^{s_1}$, with $s_1$ assumed small, are additional parameters of the likelihood.
 Let $\boldsymbol{\mathbf{\theta}} = (\boldsymbol{\mathbf{\theta}}_1, \boldsymbol{\mathbf{\theta}}_2) \in \mathbb{R}^m$ with $m = s_1 + s_2$ be all hyperparameters, with prior distribution $p(\boldsymbol{\mathbf{\theta}})$.
-Such that $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$ with posterior distribution
+The posterior distribution under an LGM in then
 \begin{equation}
-p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}}).
+p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}}),
 \end{equation}
+with the complete set of parameters $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$.
 
 ### Extended latent Gaussian model {#elgm}
 
 Extended latent Gaussian models [ELGMs; @stringer2022fast] facilitate modelling of data with greater non-linearities than an LGM.
-In an ELGM, the structured additive predictor is redefined as $\boldsymbol{\mathbf{\eta}} = (\eta_1, \ldots \eta_{N_n})$, where $N_n \in \mathbb{N}$ is a function of $n$, and it is possible that $N_n \neq n$.
+In an ELGM, the structured additive predictor is redefined as
+\begin{equation}
+\boldsymbol{\mathbf{\eta}} = (\eta_1, \ldots \eta_{N_n}),
+\end{equation}
+where $N_n \in \mathbb{N}$ is a function of $n$.
+Unlike in the LGM case, it is possible that $N_n \neq n$.
 Each mean response $\mu_i$ now depends on some subset $\mathcal{J}_i \subseteq [N_n]$ of indices of $\boldsymbol{\mathbf{\eta}}$, with $\cup_{i = 1}^n \mathcal{J}_i = [N_n]$ and $1 \leq |\mathcal{J}_i| \leq N_n$, where $[N_n] = \{1, \ldots, N_n\}$.
 The inverse link function $g(\cdot)$ is redefined for each observation to be a possibly many-to-one mapping $g_i: \mathbb{R}^{|\mathcal{J}_i|} \to \mathbb{R}$, such that $\mu_i = g_i(\boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i})$.
 Put together, ELGMs are of the form
 \begin{align*}
 y_i &\sim p(y_i \, | \, \boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i}, \boldsymbol{\mathbf{\theta}}_1), \quad i = 1, \ldots, n, \\
 \mu_i &= \mathbb{E}(y_i \, | \, \boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i}) = g_i(\boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i}), \\
-\eta_j &= \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}), \quad j = 1, \ldots, N_n,
+\eta_j &= \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}), \quad j \in [N_n].
 \end{align*}
-with latent field and hyperparameter prior distributions as in the LGM case.
+The latent field and hyperparameter prior distributions are equivalent to the LGM case.
 
-The ELGM class is well suited to small-area estimation of HIV indicators, and used throughout the thesis.
-While it can be transformed to an LGM using the Poisson-multinomial transformation [@baker1994multinomial] the multinomial logistic regression model used in Chapter \@ref(multi-agyw) is most naturally written as an ELGM where each observation depends on the set of structured additive predictors corresponding to the set of multinomial observations.
+The ELGM class is well suited to small-area estimation of HIV.
+While it can be transformed to an LGM using the Poisson-multinomial transformation [@baker1994multinomial] the multinomial logistic regression model used in Chapter \@ref(multi-agyw) is most naturally written as an ELGM, where each observation depends on the set of structured additive predictors corresponding to the set of multinomial observations.
 In Chapter \@ref(naomi-aghq), the Naomi small-area estimation model used to produce estimates of HIV indicators is shown to have the features of an ELGM.
 
-## Model comparison
+## Model comparison {#model-comparison}
 
-For a review see @vehtari2012survey or @gelman2014understanding.
+Many models can be formulated and fit to data during the course of an analysis.
+Model comparison methods look to determine which models are most suitable to use, based on actualisation of suitability.
 
-### Information criteria
+### Bayes factors
 
-* Bayes factor
+The evidence $p(\mathbf{y})$ (Equation \@ref(eq:evidence)) can be used as a measure of model fit
+Let $\mathcal{M}_0$ and $\mathcal{M}_1$ be two competing models.
+Then the Bayes factor comparing $\mathcal{M}_0$ to $\mathcal{M_1}$ is
 \begin{equation}
-B_{01} = \frac{p(\mathbf{y} \, | \, \ \mathcal{M}_0)}{p(\mathbf{y} \, | \, \ \mathcal{M}_1)}.
+B_{01} = \frac{p(\mathbf{y} \, | \, \ \mathcal{M}_0)}{p(\mathbf{y} \, | \, \ \mathcal{M}_1)},
+\end{equation}
+where $p(\mathbf{y} \, | \, \ \mathcal{M})$ denotes the evidence under model $\mathcal{M}$.
+If $B_{01} > 1$ then support is provided for $\mathcal{M_0}$ and if $B_{01} < 1$ the support is provided for $\mathcal{M_1}$.
+
+### Information criteria {#information-criteria}
+
+The log pointwise predictive density (LPPD) is
+\begin{equation}
+\text{lppd} = \log \left( \prod_{i = 1}^n p(y_i) \right) = \sum_{i = 1}^n \log \int p(y_i \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}}) \text{d} \boldsymbol{\mathbf{\phi}}.
+\end{equation}
+The expected log pointwise predictive density for new data (ELPPD) is
+\begin{equation}
+\text{elppd} = \log \left( \prod_{i = 1}^n p(\tilde y_i) \right).
 \end{equation}
 
-* The log pointwise predictive density (LPPD), the expected log pointwise predictive density for new data (ELPPD) and the expected log predictive density for a new data point (ELPD).
-
-* The Akaike information criterion [AIC; @akaike1973information] is
-\begin{align}
-  \text{AIC} &= -2 \times \text{elpd}_\text{AIC}, \\
-  \text{elpd}_\text{AIC} &=  \log p(\mathbf{y} \, | \, \hat{\boldsymbol{\mathbf{\phi}}}) - p_{\text{AIC}},
-\end{align}
-where the point estimate $\hat{\boldsymbol{\mathbf{\phi}}}$ is the maximum likelihood estimate.
-
-* The deviance information criterion [DIC; @spiegelhalter2002bayesian] is
-\begin{align}
-  \text{DIC} &= -2 \times \text{elpd}_\text{DIC}, \\
-  \text{elpd}_\text{DIC} &= \log p(\mathbf{y} \, | \, \hat{\boldsymbol{\mathbf{\phi}}}) - p_{\text{DIC}},
-\end{align}
-where $\hat{\boldsymbol{\mathbf{\phi}}}$ is the posterior mean or mode, and the effective number of parameters is
+Information criteria such as the Akaike information criterion [AIC; @akaike1973information], deviance information criterion [DIC; @spiegelhalter2002bayesian], and widely applicable information criterion [WAIC; @watanabe2013widely], are constructed using 1) an approximation to the ELPD given by $\text{elpd}_{\texttt{IC}}$ 2) a complexity penalty $p_{\texttt{IC}}$.
+For the AIC and DIC, the ELPD approximation is
 \begin{equation}
-p_\text{DIC} = 2 \left( \log p(\mathbf{y} \, | \,\hat{\boldsymbol{\mathbf{\phi}}}) - \mathbb{E}_{{\boldsymbol{\mathbf{\phi}}} \, | \, \mathbf{y}}[\log p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})] \right).
+\text{elpd}_\texttt{IC} = \log p(\mathbf{y} \, | \, \hat{\boldsymbol{\mathbf{\phi}}}),
 \end{equation}
-A weakness of the DIC is that it is based on a point estimate [@spiegelhalter2014deviance]
-
-* The widely applicable information criterion [WAIC; @watanabe2013widely] improves upon the DIC by using the predictive density of the data and is given by
+where $\hat{\boldsymbol{\mathbf{\phi}}}$ is a maximum likelihood estimate (AIC) or a alternative Bayesian point estimate (DIC).
+The WAIC improves upon this limitaiton [@spiegelhalter2014deviance] of the AIC and DIC by using the predictive density of the data
 \begin{align}
-  \text{WAIC} &= -2 \times \text{elpd}_\text{WAIC}, \\
-  \text{elpd}_\text{WAIC}& = \sum_{i = 1}^n \log p(y_i \, | \, \mathbf{y}) - p_\text{WAIC}.
+  \text{elpd}_\texttt{WAIC} = \sum_{i = 1}^n \log p(y_i \, | \, \mathbf{y}).
 \end{align}
+
+For a more complete review of these information criteria from a Bayesian perspective, see @gelman2014understanding.
 
 ### Cross-validation
 
-The above information criteria can be viewed as approximations to cross-validation.
-There are three parts of a cross-validation: the way the data is divided, the scoring rule used, the computational method used.
+The information criteria in Section \@ref(information-criteria) can be viewed as approximations to cross-validation.
+There are three parts of a cross-validation: the way the data is divided, the scoring rule used, the computational method used [@vehtari2020cross].
 
 ### Scoring rules
 
 Scoring rules [SR; @gneiting2007strictly] measure the quality of probabilistic forecasts.
-The log score is one scoring rule.
-A proper scoring rule (PSR).
-A strictly proper scoring rule (SPSR).
-The continuous ranked probability score [CRPS; @matheson1976scoring] generalises the Brier score [@brier1950verification] beyond binary classification.
+The log score, used above in the LPPD and ELPPD, is one example of a scoring rule.
+
+A scoring rule is called proper when such and such.
+A scoring rule is called strictly proper when such and such.
+
+The log score (LS) is a strictly proper scoring rule (SPSR).
+Another example of a SPSR is the continuous ranked probability score [CRPS; @matheson1976scoring], which generalises the Brier score [@brier1950verification] beyond binary classification.
 
 ## Survey methods {#survey}
 
