--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -36,6 +36,7 @@
 \item[VMMC] Voluntary Medical Male Circumcision.
 \item[DHS] Demographic and Health Surveys.
 \item[PHIA] Population-based HIV Impact Assessment.
+\item[SSA] Sub-Saharan Africa.
 
 \item[MCMC] Markov Chain Monte Carlo.
 \item[NUTS] No-U-Turn Sampler.
@@ -49,21 +50,27 @@
 \item[HMC] Hamiltonian Monte Carlo.
 \item[GMRF] Gauss-Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
+\item[LM] Linear Model.
 \item[GLM] Generalised Linear Model.
 \item[GLMM] Generalised Linear Mixed effects Model.
 \item[LGM] Latent Gaussian Model.
 \item[ELGM] Extended Latent Gaussian Model.
 \item[BF] Bayes Factor.
+\item[CPO] Conditional Predictive Ordinate.
 \item[DIC] Deviance Information Criterion.
 \item[BIC] Bayesian Information Criterion.
 \item[WAIC] Watanabe-Akaike Information Criterion.
 \item[SR] Scoring Rule.
 \item[SPSR] Strictly Proper Scoring Rule.
 \item[CRPS] Continuous Ranked Probability Score.
+\item[LS] Log Score.
+\item[PIT] Probability Integral Transform.
+\item[ECDF] Empirical Cumulative Difference Function.
 \item[ESS] Effective Sample Size.
 \item[IID] Independent and Identically Distributed.
 \item[PPL] Probabilistic Programming Language.
 \item[CCD] Central Composite Design.
 \item[EB] Empirical Bayes.
+\item[AGHQ] Adaptive Gauss-Hermite Quadrature.
 
 \end{mclistof} 
