--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231124-211057-4b08b04f"
+resource_version <- "20231127-185348-7b50cb21"
 ```
 
 # Models for areal spatial structure
@@ -30,6 +30,13 @@ knitr::include_graphics(path)
 
 ```{r bym2-aghq-nuts, fig.cap="(ref:bym2-aghq-nuts)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/bym2-aghq-nuts.png")
+knitr::include_graphics(path)
+```
+
+(ref:time-taken) A comparison of time taken to fit AGHQ via `aghq` as compared with NUTS via `tmbstan` for each inferential model.
+
+```{r time-taken, fig.cap="(ref:time-taken)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/time-taken.png")
 knitr::include_graphics(path)
 ```
 
