--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -109,6 +109,8 @@ Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
 PrEP and PEP are more costly than some other prevention options, so primarily useful in high risk settings.
 
+<!-- PrEP has high individual-level effectivenss but there are few population-level studies. -->
+
 Though important progress had been made, facilitated by the interventions above, there remains much more to do.
 In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
 Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
